<package>
  <name>slam_navigation</name>
  <maintainer email="daqing_yi@byu.edu">walter</maintainer>
  <description>
    SLAM navigation
  </description>
  <version>0.0.0</version>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
 
  <run_depend>message_runtime</run_depend> 
</package>
