<package>
  <name>turtlebot_graphslam</name>
  <maintainer email="daqing_yi@byu.edu">walter</maintainer>
  <description>
    Turtlebot Graph SLAM
  </description>
  <version>0.0.0</version>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>
  <build_depend>Eigen</build_depend>
  
  <run_depend>cmake_modules</run_depend> 
  <run_depend>Eigen</run_depend> 

</package>
